--- a/.github/workflows/anidb.yml
+++ b/.github/workflows/anidb.yml
@@ -3,7 +3,7 @@ on:
   schedule:
     - cron:  '0 0 * * *'
 jobs:
-  pwd:
+  anidb:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
